2020-07-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cf. users/24972, users/24978): Doc/Zsh/expn.yo:
	Use an ASCII hyphen/minus rather than a dash.

2020-07-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* users/24971: Doc/Zsh/expn.yo, Src/sort.c, Src/subst.c,
	Src/zsh.h, Test/D04parameter.ztst: Add parameter flag (-)
	to allow signed numeric sorting.

2020-06-28  zsugabubus  <zsugabubus>

	* 46097: Completion/Unix/Command/_rm: Fix "assignment to invalid
	subscript range" error in _rm.

2020-06-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 46132: Doc/Zsh/expn.yo: docs: Use an itemized list in the
	documentation of the *(o) glob qualifier.

	* 46131: Completion/Unix/Command/_git: _git-config: Partly
	fix a bug whereby a 'foo.ba<TAB>' wouldn't be completed to
	'foo.bar.baz'.

	* 46128: Completion/Unix/Command/_git: Complete more options
	and diff/merge tools.

	* 46129: Completion/Unix/Command/_git: _git-config: Fix a bug
	where a second trailing dot would be incorrectly offered.

	* 46130: Completion/Unix/Command/_git: _git-config: Complete
	some more options.

2020-06-27  Miroslav Koškár  <mk@mkoskar.com>

	* 46140: Completion/Unix/Command/_git: Fix insufficiently
	quoted pattern

	* 46139: Completion/Unix/Command/_git: Remove hanging whitespaces

2020-06-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (after 46068): Src/Zle/zle_utils.c: Fix a compiler
	warning.

	* 46072 + 46136: Doc/Zsh/contrib.yo, Doc/Zsh/zle.yo,
	Functions/Misc/add-zle-hook-widget, Src/Zle/zle_thingy.c,
	Test/X04zlehighlight.ztst: Add the 'zle $widget -f nolast'
	syntax, to improve add-zle-hook-widget support for multiple
	hook functions.

	* users/24959/0002: Doc/Zsh/grammar.yo: Update aliases
	documentation for the addition of the ALIAS_FUNC_DEF option.

	* users/24959/0001: Doc/Zsh/builtins.yo, Doc/Zsh/grammar.yo:
	Extend documentation of global aliases.

2020-06-26  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/contrib.yo, Doc/Zsh/expn.yo,